# embedded_snake

./: Cargo.toml  flash.sh
.cargo/: config.toml
src/: main.rs
